added engines and scripts to package.json for heroku

--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "scripts": {
+    "start": "node index.js"
+  },
+  "engines": {
+    "npm": "8.4.1",
+    "node": "17.5.0"
+  },
   "dependencies": {
     "react-router-dom": "^6.3.0"
   }
